# arxiv-keycloak

./: .drone.yml  .gitignore  Makefile  README.md  config.sh  docker-compose-devdb.yaml  docker-compose.yaml  mypy.ini
bizlogic/: Makefile  pyproject.toml  sqlalchemy_helper.py
bizlogic/arxiv_bizlogic/: README.md  audit_event.py  database.py  fastapi_helpers.py  gcp_helper.py  latex_helpers.py  randomness.py  sqlalchemy_helper.py  user_account_models.py  user_status.py
bizlogic/arxiv_bizlogic/author_id/: author_id.py
bizlogic/arxiv_bizlogic/bizmodels/: tapir_to_kc_mapping.py  tapir_to_user_claims.py  user_model.py
bizlogic/arxiv_bizlogic/ng_auth/: ng_cookie.py
bizlogic/arxiv_bizlogic/orcid/: arxiv_orcid.py
bizlogic/arxiv_bizlogic/validation/: README.md  bad_passwords_hashes.json  email_validation.py  generate_password_hashes.py  passwordValidator.ts  password_validator.py
keycloak_bend/: .gitignore  Dockerfile  Makefile  config.sh  dev-deploy-debug.yaml  dev-deploy.yaml  docker-compose.yaml  keycloak.conf  pyproject.toml  start-keycloak.sh  twf
keycloak_bend/arxiv-username-validator/: Makefile  pom.xml
keycloak_bend/cert/: Makefile  op-get-file.sh
keycloak_bend/cicd/: cloudbuild-complete.yaml  cloudbuild-infra.yaml  cloudbuild.yaml
keycloak_bend/cicd/env/: backend.tf  dev.tfvars  main.tf  outputs.tf  tfplan  variables.tf
keycloak_bend/cicd/keycloak_bend/: backend.tf  dev.tfvars  keycloak.tf  keycloak_service.yaml  notes  outputs.tf  prod.tfvars  staging.tfvars  terraform-commands.md  variables.tf  versions.tf
keycloak_bend/kcfy-arxiv/: Makefile  index.html  package.json  vite.config.ts
keycloak_bend/kcfy-arxiv/src/: .gitignore  kc.gen.tsx
keycloak_bend/kcfy-arxiv/src/components/: ArxivAppBar.tsx  ArxivFooter.tsx  ArxivHeader.tsx  HoverLink.tsx
keycloak_bend/kcfy-arxiv/src/login/: KcPage.tsx  PasswordWrapper.tsx  Template.tsx  UserProfileFormFields.tsx
keycloak_bend/kcfy-arxiv/unused/: Login0.tsx  Login1.tsx
keycloak_bend/keycloak-cert/: .gitignore  Makefile  localhost.cnf  self-signed.sh
keycloak_bend/keycloak_migration/: Makefile
keycloak_bend/local-db/: setup_kc_db.sh
keycloak_bend/pubsub-listener/: .gitignore  Makefile  fix.diff
keycloak_bend/pubsub-listener/keycloak-pubsub-listener/: pom.xml
keycloak_bend/realms/: arxiv-realm-aaat.json  arxiv-realm-gcp-dev.json  arxiv-realm-localhost.json  arxiv-realm.json
keycloak_bend/setup-job/: Dockerfile  README.md  requirements.txt  setup_realm_job.py
keycloak_bend/tests/: flask_fixture.py  test_keycloak_dev.py
keycloak_bend/tools/: Dockerfile  Makefile  cloudbuild.yaml  setup-arxiv-realm.sh  setup-arxiv-realms-in-docker.sh  setup_arxiv_realm.py  update_kc_client_secret.py
keycloak_tapir_bridge/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
keycloak_tapir_bridge/src/: main.py
keycloak_tapir_bridge/src/actions/: __init__.py  authn.py  roies.py  user.py
keycloak_tapir_bridge/tests/: smoke.py
keycloak_tapir_bridge/tests/data/: email-verified.json
legacy_auth_provider/: Dockerfile  Makefile  cloudbuild.yaml  pyproject.toml  twf
legacy_auth_provider/src/: legacy_auth_provider.py  user_model.py
legacy_auth_provider/tests/: local-run.sh  test_login.py
legacy_auth_provider/tools/: creds.csv  mass_reset_password.py
oauth2-authenticator/: .gitignore  Dockerfile  Dockerfile.test  Makefile  config.sh  mypy.ini  pyproject.toml
oauth2-authenticator/arxiv_oauth2/: __init__.py  account.py  account_registration.py  app_logging.py  authentication.py  captcha.py  countries.py  keycloak.py  legacy.py  main.py  mysql_retry.py  orcid.py  sessions.py  user_model.py
oauth2-authenticator/arxiv_oauth2/alnum_voice/: alnum2mp3.py
oauth2-authenticator/arxiv_oauth2/biz/: __init__.py  account_biz.py  cold_migration.py  email_history_biz.py
oauth2-authenticator/arxiv_oauth2/biz/keycloak_audit/: __init__.py
oauth2-authenticator/arxiv_oauth2/db_models/: user_model.py
oauth2-authenticator/arxiv_oauth2/stateless_captcha/: __init__.py
oauth2-authenticator/arxiv_oauth2/transitional/: mock_keycloak_admin.py
oauth2-authenticator/isolated_tests/: test_account_models.py  test_mypy.py
oauth2-authenticator/stubs/lameenc/: __init__.pyi
oauth2-authenticator/tests/: Makefile  conftest.py  docker-compose-db-only.yaml  docker-compose.yaml  test-env  test-env-sqlite  test_account_io.py  test_account_registration.py  test_change_email.py  test_change_password.py  test_change_user_profile.py  test_user_model.py
oauth2-authenticator/tests/config/: aaat-nginx.conf  test-mta-api.json
oauth2-authenticator/tests/test_mta_client/models/: __init__.py  create_email_emails_post_response_create_email_emails_post.py  email_base.py  email_record.py
test-site/: Dockerfile  Makefile  app.py  pyproject.toml
test-site/templates/: home.html  unauthorized.html  user.html
tools/: Dockerfile  Makefile  all_username.py  drone_trigger_build.py  hello-keycloak-audit.sh  install_firefox_esr.sh  install_py311.sh  install_py312.sh  keycloak_audit_pubsub.py  load_test_data.py  load_test_data.sh  load_test_users.py  nogoog-users-map.json  pyproject.toml  reader.sh  remap_users.py  restore-arxiv-db-myloader.sh  restore-arxiv-db.sh  send_test_mail.py  start_arxiv_mysql.py
user-portal/: .gitignore  Dockerfile  Makefile  pyproject.toml
user-portal/arxiv_user_portal/: app.py  auth_config.py  config.py  factory.py
user-portal/arxiv_user_portal/controllers/: __init__.py  captcha_image.py  ownership.py  registration.py  util.py
user-portal/arxiv_user_portal/helpers/: arxiv_ce_auth.py
user-portal/arxiv_user_portal/routes/: __init__.py  endorsement.py  ownership.py  ui.py
user-portal/arxiv_user_portal/stateless_captcha/: __init__.py
user-portal/arxiv_user_portal/templates/: base.html  dev.html  edit_profile.html  landing.html  login.html  login_base.html  macros.html  register.html
user-portal/arxiv_user_portal/templates/endorsement/: display.html  request_detail.html
user-portal/flask_user_portal/arxiv_user_portal/: __init__.py  auth_config.py  config.py  extensions.py  factory.py
(+529 files in other folders)
