[tool.poetry]
name = "arxiv_bizlogic"
version = "0.0.1"
description = "Common code for arXiv business logic"
authors = ["arxiv.org"]
packages = [
   { include = "arxiv_bizlogic" },
   ]
include = ["arxiv_bizlogic/py.typed"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = {extras = ["email"], version = "^2.11.7"}
pydantic-settings = "^2.5.2"
sqlalchemy = "~=2.0.27"
fastapi = "^0.115"
jwcrypto = "^1.5.6"
arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", rev = "343ec7afd3e86df7665ebf3d693fa522b0b521e3"}
pyjwt = "^2.10"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "*"
pytest-mock = "^3.8.2"
pytest-cov = "*"

[tool.poetry.extras]
postgres = ["psycopg2-binary"]

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20240712"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
