[tool.poetry]
name = "keycloak-bend"
version = "0.1.0"
description = "Keycloak Backend Development Tools"
authors = ["arXiv developers <developers@arxiv.org>"]
license = "BSD-3"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
python-keycloak = "^5.1.1"
arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", rev = "656c8e841a2c610019f19fff8cc8d13d0983e377"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
selenium = "^4.27.1"
types-requests = "^2.32.0.20241016"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
