[tool.poetry]
name = "keycloak-tapir-bridge"
version = "0.1.0"
description = "Subscribe to Keycloak events and update Tapir"
authors = ["arXiv developer <developers@arxiv.org>"]
license = "BSD-3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
google-cloud = "^0.34.0"
google-cloud-pubsub = "^2.25.2"
logging-json = "^0.5.0"
arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", rev = "11e1c636f1db900a279d48f28f3a7a37ab6765a7"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
