[tool.poetry]
name = "keycloak-tapir-bridge"
version = "0.1.0"
description = "Subscribe to Keycloak events and update Tapir"
authors = ["arXiv developer <developers@arxiv.org>"]
license = "BSD-3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
google-cloud = "^0.34.0"
google-cloud-pubsub = "^2.25.2"
logging-json = "^0.5.0"
arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", rev = "d8fbd7bb6fd5d135a96812a0c36f1c50ec5dfe1c"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
