[tool.poetry]
name = "legacy-auth-provider"
version = "0.1.0"
description = "Legacy Auth REST API provider"
authors = ["arXiv developer <developers@arxiv.org>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.115"
arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", rev = "d8fbd7bb6fd5d135a96812a0c36f1c50ec5dfe1c"}
python-json-logger = "^2.0.7"
arxiv-bizlogic = {git = "https://github.com/arXiv/arxiv-keycloak.git", rev = "master", subdirectory = "bizlogic"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
mysql-connector-python = "^9.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
