[tool.poetry]
name = "test-site"
version = "0.1.0"
description = "A simple web site for test"
authors = ["developers@arxiv.org"]
license = "BSD-3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", rev = "dd1104a0dd4c6a925401c9d7eef249799d287b4e"}
python-dotenv = "^1.0.1"
hypercorn = "^0.17.3"
python-json-logger = "^3.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pypi = "^2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
