[tool.poetry]
name = "test-site"
version = "0.1.0"
description = "A simple web site for test"
authors = ["developers@arxiv.org"]
license = "BSD-3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", rev = "656c8e841a2c610019f19fff8cc8d13d0983e377"}
python-dotenv = "^1.0.1"
hypercorn = "^0.17.3"
python-json-logger = "^3.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pypi = "^2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
