[tool.poetry]
name = "arxiv-keycloak-tools"
version = "0.1.0"
description = "Development tools for arXiv Keycloak"
authors = ["Naoyuki Tai <ntai@arxiv.org>"]
license = "BSD-3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", rev = "9ca8d42b0fa85986e602875811c44735c1cbe4b8"}
google-cloud-pubsub = "^2.27.2"
pymysql = "^1.1.1"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pypi = "^2.1"
selenium = "^4.27.1"
types-requests = "^2.32.0.20241016"
pytest-mock = "^3.14.0"
fastapi = "^0.115.11"
