[tool.poetry]
name = "arxiv-keycloak-tools"
version = "0.1.0"
description = "Development tools for arXiv Keycloak"
authors = ["Naoyuki Tai <ntai@arxiv.org>"]
license = "BSD-3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", rev = "d8fbd7bb6fd5d135a96812a0c36f1c50ec5dfe1c"}
google-cloud-pubsub = "^2.27.2"
pymysql = "^1.1.1"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pypi = "^2.1"
selenium = "^4.27.1"
types-requests = "^2.32.0.20241016"
pytest-mock = "^3.14.0"
fastapi = "^0.115.11"
