[tool.poetry]
name = "arxiv-keycloak-tools"
version = "0.1.0"
description = "Development tools for arXiv Keycloak"
authors = ["Naoyuki Tai <ntai@arxiv.org>"]
license = "BSD-3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", rev = "develop"}
google-cloud-pubsub = "^2.27.2"
pymysql = "^1.1.1"
psycopg2-binary = "^2.9.10"
arxiv-bizlogic = {git = "https://github.com/arXiv/arxiv-keycloak.git", rev = "master", subdirectory = "bizlogic"}
ruamel-yaml = "^0.18.6"
python-json-logger = "^2.0.7"
python-dateutil = "^2.8.2"
pyjwt = "^2.9.0"
requests = "^2.32.3"
jwcrypto = "^1.5.6"
python-keycloak = "^5.1.1"
httpx = "^0.28.1"
pycountry = "^24.6.1"
asgi-correlation-id = "^4.3.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pypi = "^2.1"
selenium = "^4.27.1"
types-requests = "^2.32.0.20241016"
pytest-mock = "^3.14.0"
fastapi = "^0.115.11"
